# cubehash-rs

./: Cargo.toml  LICENSE-0BSD  LICENSE-MIT  README.md
src/: cubehash.rs  cubemac.rs  lib.rs
src/cubehash/: avx2.rs  avx512.rs  neon.rs  soft.rs  sse2.rs
