[package]
name = "cubehash"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR 0BSD"

[dependencies]
digest = { version = "=0.11.0-pre.8", features = ["mac"] }
cpufeatures = "0.2"
static_assertions = "1.1"
cfg-if = "1.0"

[features]
default = ["std"]
std = ["digest/std"]
zeroize = ["digest/zeroize"]
unstable-avx512 = []

[[bin]]
name = "brunch"
test = false
required-features = ["unstable-avx512"]